[package]
name = "big-bytes"
version = "1.0.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Converts float to the largest possible multiple of the byte unit"
readme = "README.md"
keywords = ["conversion", "bytes"]
repository = "https://github.com/spenserblack/big-bytes-rs"

[dependencies]

[badges]
is-it-maintained-issue-resolution = { repository = "spenserblack/big-bytes-rs" }
is-it-maintained-open-issues = { repository = "spenserblack/big-bytes-rs" }
maintenance = { status = "passively-maintained" }
